rustidy/tests/parse-error/char_literal_outside_range/input.rs
fn a() {
	let _ = '\xFF';
}
